<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="langcode">en</string>

    <string name="app_name">TodoNotesApp</string>
    <string name="action_settings">Settings</string>
	<string name="dotdotdot">...</string>
	<string name="error">Error</string>
	<string name="getafreeaccount">Get a free account!</string>
	<string name="login">Login</string>
	<string name="loginerror">The username/password pair is incorrect</string>
	<string name="mailaddress">E-mail address</string>
	<string name="networkerror">Unknown network error happened, please try again later!</string>
	<string name="notodo">There are no todos in your list</string>
	<string name="password">Password</string>
	<string name="passwordagain">Password again</string>
	<string name="registration">Registration</string>
	<string name="registrationsucc">Registration was successful</string>
	<string name="todocontent">Content</string>
	<string name="tododetail">Detail</string>
	<string name="username">Username</string>
</resources>
