<?xml version="1.0" encoding="utf-8"?>

	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/loginMainLayout"
	    android:layout_width="300dp"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
		android:layout_gravity="center_horizontal">
		<EditText
			android:id="@+id/loginUserNameField"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:singleLine="true"
		    android:hint="@string/username"
			/>
		<EditText
			android:id="@+id/loginPasswordField"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:singleLine="true"
		    android:inputType="textPassword"
		    android:hint="@string/password"
		    />
		<Button
			android:id="@+id/loginButton"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/login" />
	<TextView
			android:id="@+id/registrationTextView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="60dp"
			android:textSize="20sp"
			android:gravity="center"
			android:text="@string/getafreeaccount" />
</LinearLayout>